plugins/kotlin/idea/tests/testData/highlighterMetaInfo/SyntheticExtensionProperty.kt.highlighting
// IGNORE_FIR
val <!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_PACKAGE_PROPERTY'")!>weekYear<!> = java.util.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_ABSTRACT_CLASS'")!>Calendar<!>.<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_FUNCTION_CALL'")!>getInstance<!>().<!HIGHLIGHTING("severity='INFORMATION'; textAttributesKey='KOTLIN_SYNTHETIC_EXTENSION_PROPERTY'")!>weekYear<!>
